Table "attendance_classes" {
  "id" varchar
  "registration_number" integer
  "student_id" bigint
  "lecture_id" bigint
  "created_at" datetime
  "updated_at" datetime
}

Table "lectures" {
  "id" varchar
  "timetable_id" bigint
  "subject_id" bigint
  "hope_day" datetime
  "created_at" datetime
  "updated_at" datetime
}

Table "student_distinctions" {
  "id" varchar
  "distinction" string
  "created_at" datetime
  "updated_at" datetime
}

Table "students" {
  "id" varchar
  "provider" string
  "uid" string
  "encrypted_password" string
  "reset_password_token" string
  "reset_password_sent_at" datetime
  "allow_password_change" boolean
  "confirmation_token" string
  "confirmed_at" datetime
  "confirmation_sent_at" datetime
  "unconfirmed_email" string
  "name" string
  "email" string
  "address" string
  "phone_number" string
  "join_date" datetime
  "withdrawal_date" datetime
  "tokens" json
  "created_at" datetime
  "updated_at" datetime
}

Table "subjects" {
  "id" varchar
  "subject_name" string
  "student_distinction_id" bigint
  "created_at" datetime
  "updated_at" datetime
}

Table "timetables" {
  "id" varchar
  "time_tables" string
  "starting_time" string
  "ending_time" string
  "created_at" datetime
  "updated_at" datetime
}

Ref "fk_rails_attendance_classes_lectures":"attendance_classes"."lecture_id" - "lectures"."id"

Ref "fk_rails_attendance_classes_students":"attendance_classes"."student_id" - "students"."id"

Ref "fk_rails_lectures_subjects":"lectures"."subject_id" - "subjects"."id"

Ref "fk_rails_lectures_timetables":"lectures"."timetable_id" - "timetables"."id"

Ref "fk_rails_subjects_student_distinctions":"subjects"."student_distinction_id" - "student_distinctions"."id"
